// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesFilterScreen Component renders correctly 1`] = `
<withOrientation
  style={
    Object {
      "backgroundColor": "#2d2f7f",
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <Header
    onBack={[Function]}
    onClearAll={[Function]}
    selectedCategories={
      Set {
        "Music",
      }
    }
  />
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <List
      locale="en-GB"
      onPress={[Function]}
      stagedCategories={
        Set {
          "Music",
        }
      }
    />
  </Component>
  <Component
    style={
      Object {
        "backgroundColor": "#2d2f7f",
        "paddingVertical": 12,
      }
    }
  >
    <ContentPadding
      padding={Object {}}
      style={Object {}}
    >
      <Button
        disabled={false}
        onPress={[Function]}
      >
        Show 1 event
      </Button>
    </ContentPadding>
  </Component>
</withOrientation>
`;

exports[`CategoriesFilterScreen Component renders correctly with no categories selected 1`] = `
<withOrientation
  style={
    Object {
      "backgroundColor": "#2d2f7f",
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <Header
    onBack={[Function]}
    onClearAll={[Function]}
    selectedCategories={Set {}}
  />
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <List
      locale="en-GB"
      onPress={[Function]}
      stagedCategories={Set {}}
    />
  </Component>
  <Component
    style={
      Object {
        "backgroundColor": "#2d2f7f",
        "paddingVertical": 12,
      }
    }
  >
    <ContentPadding
      padding={Object {}}
      style={Object {}}
    >
      <Button
        disabled={false}
        onPress={[Function]}
      >
        Show all events
      </Button>
    </ContentPadding>
  </Component>
</withOrientation>
`;
